Release History
***************

1.4 (unreleased)
================

- Made tests pass with both zc.buildout 1.4 and 1.5, lifted the upper version
  bound on zc.buildout. (#695732)

1.3.3 (2010-11-10)
==================

- Remove the temporary build directory when cmmi succeeds.

- Specify that the zc.buildout version be <1.5.0b1, as the recipe is
  currently not compatible with zc.buildout 1.5.

1.3.2 (2010-08-09)
==================

- Remove the build directory for a shared build when the source cannot be
  downloaded.

- Declared a test dependency on zope.testing.


1.3.1 (2009-09-10)
==================

- Declare dependency on zc.buildout 1.4 or later. This dependency was introduced
  in version 1.3.


1.3 (2009-09-03)
================

- Use zc.buildout's download API. As this allows MD5 checking, added the
  md5sum and patch-md5sum options.

- Added options for changing the name of the configure script and
  overriding the ``--prefix`` parameter.

- Moved the core "configure; make; make install" command sequence to a
  method that can be overridden in other recipes, to support packages
  whose installation process is slightly different.

1.2.1 (2009-08-12)
==================

Bug fix: keep track of reused shared builds.


1.2.0 (2009-05-18)
==================

Enabled using a shared directory for completed builds.

1.1.6 (2009-03-17)
==================

Moved 'zc' package from root of checkout into 'src', to prevent testrunner
from finding eggs installed locally by buildout.

Removed deprecations under Python 2.6.

1.1.5 (2008-11-07)
==================

Added to the README.txt file a link to the SVN repository, so that Setuptools
can automatically find the development version when asked to install the
"-dev" version of zc.recipe.cmmi.

Bugs Fixed
----------

Applied fix for bug #261367 i.e. changed open() of file being downloaded to
binary, so that errors like the following no longer occur under Windows.

  uncompress = self.decompress.decompress(buf)