@@ -224,13 +224,103 @@ directory:
     <BLANKLINE>
 
 
+Interaction with other users of shared builds
+=============================================
+
+While shared builds are a way to cache a build between installation runs of a
+given buildout part, they are, more importantly, shared between multiple parts
+and most probably, multiple buildouts. This implies two general rules of
+behaviour: We should never delete shared builds, and we need to be prepared
+for shared builds to be deleted by other system at any time.
+
+In other words: Every install or update run of the recipe that uses a shared
+build needs to check whether the build still exists on disk and rebuild it if
+it does not. On the other hand, a part using the shared build must not declare
+the shared build its own property lest buildout remove it when the shared
+build is no longer needed, either because the part no longer uses it or
+because the part itself is no longer used.
+
+The last thing we did above was to install a shared build:
+
+    >>> ls(cache, 'cmmi', 'build')
+    d  <BUILDID>
+
+If someone deletes this shared build, updating the buildout part that needs it
+will cause it to be rebuilt:
+
+    >>> rmdir(cache, 'cmmi', 'build')
+    >>> print system('bin/buildout')
+    Updating foo.
+    foo: Unpacking and configuring
+    configuring foo /cache/cmmi/build/<BUILDID>
+    echo building foo
+    building foo
+    echo installing foo
+    installing foo
+
+    >>> ls(cache, 'cmmi', 'build')
+    d  <BUILDID>
+
+If we stop using the shared build, it stays in the build cache:
+
+    >>> write('buildout.cfg',
+    ... """
+    ... [buildout]
+    ... parts = foo
+    ... download-cache = %s
+    ...
+    ... [foo]
+    ... recipe = zc.recipe.cmmi
+    ... url = file://%s/foo.tgz
+    ... """ % (cache, distros))
+
+    >>> print system('bin/buildout')
+    Uninstalling foo.
+    Installing foo.
+    foo: Unpacking and configuring
+    configuring foo /sample-buildout/parts/foo
+    echo building foo
+    building foo
+    echo installing foo
+    installing foo
+
+    >>> ls(cache, 'cmmi', 'build')
+    d  <BUILDID>
+
+
 Regression: Keeping track of a reused shared build
 ==================================================
 
-zc.recipe.cmmi 1.2 had a bug that manifested when reusing a shared build by a
-second buildout: The part wouldn't keep track of the shared build and thus
-wasn't able to restore it if it got deleted from the cache. Let's simulate the
-second buildout by removing .installed.cfg, then this is how it should work:
+Let's first remove and rebuild everything to get some measure of isolation
+from the story so far:
+
+    >>> remove('.installed.cfg')
+    >>> rmdir(cache, 'cmmi', 'build')
+
+    >>> write('buildout.cfg',
+    ... """
+    ... [buildout]
+    ... parts = foo
+    ... download-cache = %s
+    ...
+    ... [foo]
+    ... recipe = zc.recipe.cmmi
+    ... url = file://%s/foo.tgz
+    ... shared = True
+    ... """ % (cache, distros))
+
+    >>> print system('bin/buildout')
+    Installing foo.
+    foo: Unpacking and configuring
+    configuring foo /cache/cmmi/build/<BUILDID>
+    echo building foo
+    building foo
+    echo installing foo
+    installing foo
+
+zc.recipe.cmmi 1.2 had a bug that manifested after reusing a shared build: The
+part wouldn't keep track of the shared build and thus wasn't able to restore
+it if it got deleted from the cache. This is how it should work:
 
     >>> remove('.installed.cfg')
     >>> print system('bin/buildout')
@@ -239,8 +329,7 @@ second buildout by removing .installed.cfg, then this is how it should work:
 
     >>> rmdir(cache, 'cmmi', 'build')
     >>> print system('bin/buildout')
-    Uninstalling foo.
-    Installing foo.
+    Updating foo.
     foo: Unpacking and configuring
     configuring foo /cache/cmmi/build/<BUILDID>
     echo building foo
